--- a/metadata.yaml
+++ b/metadata.yaml
@@ -37,6 +37,7 @@ subjects:
 - !lcsh 'World War, 1914-1918 -- Personal narratives, German'
 - !lcsh 'Soldiers -- Germany -- Diaries'
 - !lcsh 'Jünger, Ernst, 1895-1998'
+- GITenberg
 title: In Stahlgewittern, aus dem Tagebuch eines Stoßtruppführers
 url: http://www.gutenberg.org/ebooks/34099
 wikipedia:
